Add event packages grid and improve grid error handling in reservations view